force-app/main/default/objects/Study_Scoring_Criteria__c/Study_Scoring_Criteria__c.object-meta.xml
<CustomObject>
    <description>Defines individual rules with logic, max score, weight, and optional Study Requirement.</description>
    <label>Study Scoring Criteria</label>
    <nameField>
        <label>Study Scoring Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Scoring Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>