force-app/main/default/objects/Study_Scoring_Criteria__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Maximum score allowed</description>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>