force-app/main/default/objects/Study_Scoring_Criteria__c/fields/Parent_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Parent_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Criteria</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Study Scoring Criteria that belongs to the same Study Scoring Config.</errorMessage>
        <filterItems>
            <field>Study_Scoring_Criteria__c.Study_Scoring_Config__c</field>
            <operation>equals</operation>
            <valueField>$Source.Study_Scoring_Config__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Study_Scoring_Criteria__c</referenceTo>
    <relationshipLabel>Study Scoring Criteria</relationshipLabel>
    <relationshipName>Study_Scoring_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>