force-app/main/default/objects/Study_Scoring_Criteria__c/fields/Score_Logic__c.field-meta.xml
<CustomField>
    <fullName>Score_Logic__c</fullName>
    <description>Formula to determine score e.g., IF(Field__c &lt; 10, ‘A’, IF (Field__c &lt; 20, ‘B’, ‘C’))</description>
    <label>Score Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>