force-app/main/default/objects/Study_Scoring_Criteria__c/fields/Study_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Study_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Requirement</label>
    <referenceTo>Study_Requirement__c</referenceTo>
    <relationshipLabel>Study Scoring Criteria</relationshipLabel>
    <relationshipName>Study_Scoring_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>