force-app/main/default/objects/Study_Scoring_Criteria__c/fields/Study_Scoring_Config__c.field-meta.xml
<CustomField>
    <fullName>Study_Scoring_Config__c</fullName>
    <label>Study Scoring Config</label>
    <referenceTo>Study_Scoring_Config__c</referenceTo>
    <relationshipLabel>Study Scoring Criteria</relationshipLabel>
    <relationshipName>Study_Scoring_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>